# detect-planes-trains-automobiles

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  detect-pta.py  detect_pta.py
src/detect_planes_trains_automobiles/: __init__.py  __main__.py
tests/: test_get_video_url.py  test_main.py  test_publish_topics.py
