[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-planes-trains-automobiles"
version = "0.1.0"
description = "A generic Python application to detect planes, trains, and automobiles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
detect-planes-trains-automobiles = "detect_planes_trains_automobiles.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
