[project]
name = "detect-planes-trains-automobiles"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "opencv-python==4.13.0.92",
    "yt-dlp==2026.3.3",
    "paho-mqtt==2.1.0",
    "ultralytics==8.4.21",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.25.2",
    "fonttools==4.62.0",
    "fsspec==2026.2.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "pillow==12.1.1",
    "polars==1.39.0",
    "polars-runtime-32==1.39.0",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "typing-extensions==4.15.0",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
]
